revamping and modernizing benchmark and evals to allow convenient measures of object sizes and allocations